sort by importance/data